kubernetes/apps/app-cluster/productivity/code-server/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
  namespace: productivity
  annotations:
    external-dns.alpha.kubernetes.io/hostname: code.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/description: "Browser IDE with cluster tooling"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - productivity"
    gethomepage.dev/href: "https://code.krapulax.dev"
    gethomepage.dev/icon: "vscode.png"
    gethomepage.dev/name: "Code Server"
    gethomepage.dev/weight: "15"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - code.krapulax.dev
  rules:
    - backendRefs:
        - name: code-server
          namespace: productivity
          port: 80
